[tool.poetry]
name = "python-codex"
version = "0.1.0"
description = "All about python"
authors = ["Ashik Shezan <ashikshezan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipykernel = "^6.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
